src/Frontend/src/components/course/Navigation/Navigation.less
@import "../../../variables.less";

@rootZIndex: 3;
@contentZIndex: 3;
@overlayZIndex: @contentZIndex - 1;

.root {
  position: fixed;
  width: 250px;
  max-width: 250px;
  max-height: calc(100vh - @headerHeight - @headerDivider);
  left: -500px;
  flex-shrink: 0;
  z-index: @rootZIndex;
  transition: left 300ms ease-in-out;
}

:global {
  .open :local {
    .root {
      left: 0;
    }

    .overlay {
      opacity: 1;
      left: 0;
      right: 0;
    }
  }
}

.overflow {
  overflow: hidden;
}

.overlay {
  position: fixed;
  z-index: @overlayZIndex;

  left: 100vw;
  top: @headerHeight;
  bottom: 0;
  right: 0;

  opacity: 0;

  transition: opacity 300ms ease-in-out;

  background-color: rgba(51, 51, 51, 0.8);
}

.contentWrapper {
  position: fixed;

  width: 250px;

  overflow-y: auto;
  top: @headerHeight;
  bottom: 0;
  max-height: calc(100vh - @headerHeight);
  background: #ffffff;
  z-index: @contentZIndex;
}

@media (min-width: @maxPhoneWidth) {
  .overlay {
    display: none;
  }

  .root {
    position: relative;
    left: 0;
    transition: none;
  }

  .contentWrapper {
    top: calc(@headerHeight + @headerDivider);
    bottom: auto;
    max-height: calc(100vh - @headerHeight - @headerDivider);
  }
}

@media (min-width: @maxLaptopWidth) {
  .root {
    width: 360px;
    max-width: 360px;
  }

  .contentWrapper {
    width: 360px;
  }
}

